# wattage

./: .gitignore  AppImageBuilder-aarch64.yml  AppImageBuilder-x86_64.yml  AppImageBuilder.yml  CODE_OF_CONDUCT.md  FAQ.md  README.md  TRANSLATING.md  com.v81d.Ampere.json  flake.nix  io.github.v81d.Ampere.json  io.github.v81d.Wattage.json  meson.build  shell.nix
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-appimage-aarch64.yml  build-appimage-arm64.yml  build-appimage-x86_64.yml  build-appimage.yml
data/: com.v81d.Ampere.desktop.in  com.v81d.Ampere.gschema.xml  com.v81d.Ampere.metainfo.xml.in  com.v81d.Ampere.service.in  io.github.v81d.Ampere.desktop.in  io.github.v81d.Ampere.gschema.xml  io.github.v81d.Ampere.metainfo.xml.in  io.github.v81d.Ampere.service.in  io.github.v81d.Wattage.desktop.in  io.github.v81d.Wattage.gschema.xml  io.github.v81d.Wattage.metainfo.xml.in  io.github.v81d.Wattage.service.in  meson.build
data/icons/: meson.build
docs/: FAQ.md  faq.md
po/: LINGUAS  POTFILES.in  cs.po  fr.po  it.po  it.po~  meson.build  template.po  template.pot  tr.po  tr.po~  vi.po  wattage.pot
scripts/: build.sh  clean-translations.sh  install.sh  merge-translations.sh  run.sh  update-translations.sh
src/: ampere.gresource.xml  application.vala  battery_manager.vala  config.vapi  main.blp  main.ui  main.vala  meson.build  settings  shortcuts-dialog.ui  wattage.gresource.xml  window.ui  window.vala
src/dbus/: upower.xml
src/dbus/interfaces/: org-freedesktop-dbus.vala  org-freedesktop.vala
src/interfaces/: dbus-upower.vala
src/ui/: preferences-dialog.blp  preferences-dialog.ui  shortcuts-dialog.blp  shortcuts-dialog.ui  window.blp  window.ui
src/utils/: battery_manager.vala  chart-drawer.vala  device-manager.vala  device_manager.vala  numeric-toolkit.vala
